--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -52,8 +52,9 @@ a:hover {
           align-items: center;
 }
 
-button, .button {
-  padding: 1rem 1.875rem;
+button,
+.button {
+  padding: 0.875rem 2.1875rem;
   background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
   background: linear-gradient(to right, #31d35c, #2bb7da);
   border-radius: 50px;
@@ -65,6 +66,11 @@ button, .button {
 
 .header nav {
   padding: 24px;
+}
+
+.header__logo img {
+  width: 8.8125rem;
+  height: 1.375rem;
 }
 
 .header__menu > span {
@@ -81,6 +87,10 @@ button, .button {
 .header__links a {
   font-size: 0.875rem;
   color: #9698a6;
+}
+
+.header__links a:not(:last-child) {
+  margin-right: 32px;
 }
 
 .header__cta {
